[gd_scene load_steps=3 format=3 uid="uid://cecaq4wvkvxv3"]

[ext_resource type="Script" path="res://src/title_screen/mutliplayer/room_menu.gd" id="1_gou4l"]
[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://resources/theme/wc3_theme.tres" id="1_sgqs1"]

[node name="RoomMenu" type="PanelContainer" node_paths=PackedStringArray("_player_list", "_room_config_label")]
theme = ExtResource("1_sgqs1")
theme_type_variation = &"MainPanelContainer"
script = ExtResource("1_gou4l")
_player_list = NodePath("VBoxContainer/PlayerList")
_room_config_label = NodePath("VBoxContainer/RoomConfigLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "Multiplayer room"
horizontal_alignment = 1

[node name="RoomConfigLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
fit_content = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Connected players:"

[node name="PlayerList" type="ItemList" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
allow_search = false
auto_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Back"

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Start"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
